--- a/inscriptions/templates/index.html
+++ b/inscriptions/templates/index.html
@@ -28,7 +28,7 @@
                     {% endif %}
                     {% if course.ouverte %}
                     <p>
-                        {% blocktrans with fermeture=course.date_fermeture %}Fermeture des inscriptions le {{ fermeture }}{% endblocktrans %}<br />
+                        {% blocktrans with date=course.dernier_jour_inscription %}Inscriptions jusqu'au {{ date }} inclus{% endblocktrans %}<br />
                         <a href="{% url "inscriptions_list" course_uid=course.uid %}">{% trans "Liste des inscrits" %}</a><br />
                         <a href="{% url "inscriptions_stats" course_uid=course.uid %}">{% trans "Statistiques" %}</a><br />
                     </p>
