--- a/inscriptions/templates/_participation.html
+++ b/inscriptions/templates/_participation.html
@@ -48,7 +48,7 @@
                                             <a class="btn btn-lg btn-block btn-primary" role="button" href="{% url "inscriptions_create" course_uid=course.uid %}?course={{ COURSE.uid }}&numero={{ instance.numero }}">{% trans "Inscription" %}</a><br />
                                             {% endif %}
                                             <p>
-                                                {% blocktrans with fermeture=course.date_fermeture %}Fermeture des inscriptions le {{ fermeture }}{% endblocktrans %}<br />
+                                                {% blocktrans with date=course.dernier_jour_inscription %}Inscriptions jusqu'au {{ date }} inclus{% endblocktrans %}<br />
                                             </p>
                                             {% else %}
                                             <p>
