--- a/inscriptions/templates/admin/dashboard.html
+++ b/inscriptions/templates/admin/dashboard.html
@@ -49,62 +49,113 @@ location.href = "choose/";
                         ❔A vérifier
                     </a>
                 </th>
+                <th></th>
             </tr>
             <tr>
                 <th>
-                    <a href="inscriptions/equipe/?paiement_complet=paye">Payés</a>
+                    <a href="inscriptions/equipe/?paiement=complet">Payés</a>
+                    {{ stats.course.paiement }}€
+                    ({% widthratio stats.course.paiement stats.course.prix 100 %}%)
                 </th>
                 <td>
-                    <a href="inscriptions/equipe/?paiement_complet=paye&status=complet">
+                    <a href="inscriptions/equipe/?paiement=complet&status=complet">
                         {{ stats.course.pc }}
                         ({% widthratio stats.course.pc stats.course.equipes 100 %}%)
                     </a>
                 </td>
                 <td>
-                    <a href="inscriptions/equipe/?paiement_complet=paye&status=incomplet">
+                    <a href="inscriptions/equipe/?paiement=complet&status=incomplet">
                         {{ stats.course.pi }}
                         ({% widthratio stats.course.pi stats.course.equipes 100 %}%)
                     </a>
                 </td>
                 <td>
-                    <a href="inscriptions/equipe/?paiement_complet=paye&status=erreur">
+                    <a href="inscriptions/equipe/?paiement=complet&status=erreur">
                         {{ stats.course.pe }}
                         ({% widthratio stats.course.pe stats.course.equipes 100 %}%)
                     </a>
                 </td>
                 <td>
-                    <a href="inscriptions/equipe/?paiement_complet=paye&status=verifier">
+                    <a href="inscriptions/equipe/?paiement=complet&status=verifier">
                         {{ stats.course.pv }}
                         ({% widthratio stats.course.pv stats.course.equipes 100 %}%)
+                    </a>
+                </td>
+                <td>
+                    <a href="inscriptions/equipe/?paiement=complet">
+                        {{ stats.course.p }}
+                        ({% widthratio stats.course.p stats.course.equipes 100 %}%)
                     </a>
                 </td>
             </tr>
             <tr>
                 <th>
-                    <a href="inscriptions/equipe/?paiement_complet=impaye">Impayés</a>
+                    <a href="inscriptions/equipe/?paiement=incomplet">Impayés</a>
+                    {{ stats.course.reste_a_payer }}€
+                    ({% widthratio stats.course.reste_a_payer stats.course.prix 100 %}%)
                 </th>
                 <td>
-                    <a href="inscriptions/equipe/?paiement_complet=impaye&status=complet">
+                    <a href="inscriptions/equipe/?paiement=incomplet&status=complet">
                         {{ stats.course.ipc }}
                         ({% widthratio stats.course.ipc stats.course.equipes 100 %}%)
                     </a>
                 </td>
                 <td>
-                    <a href="inscriptions/equipe/?paiement_complet=impaye&status=incomplet">
+                    <a href="inscriptions/equipe/?paiement=incomplet&status=incomplet">
                         {{ stats.course.ipi }}
                         ({% widthratio stats.course.ipi stats.course.equipes 100 %}%)
                     </a>
                 </td>
                 <td>
-                    <a href="inscriptions/equipe/?paiement_complet=impaye&status=erreur">
+                    <a href="inscriptions/equipe/?paiement=incomplet&status=erreur">
                         {{ stats.course.ipe }}
                         ({% widthratio stats.course.ipe stats.course.equipes 100 %}%)
                     </a>
                 </td>
                 <td>
-                    <a href="inscriptions/equipe/?paiement_complet=impaye&status=verifier">
+                    <a href="inscriptions/equipe/?paiement=incomplet&status=verifier">
                         {{ stats.course.ipv }}
                         ({% widthratio stats.course.ipv stats.course.equipes 100 %}%)
+                    </a>
+                </td>
+                <td>
+                    <a href="inscriptions/equipe/?paiement=incomplet">
+                        {{ stats.course.ip }}
+                        ({% widthratio stats.course.ip stats.course.equipes 100 %}%)
+                    </a>
+                </td>
+            </tr>
+            <tr>
+                <th>
+                    Total {{ stats.course.prix }}€
+                </th>
+                <td>
+                    <a href="inscriptions/equipe/?status=complet">
+                        {{ stats.course.pc|add:stats.course.ipc }}
+                        ({% widthratio stats.course.pc|add:stats.course.ipc stats.course.equipes 100 %}%)
+                    </a>
+                </td>
+                <td>
+                    <a href="inscriptions/equipe/?status=incomplet">
+                        {{ stats.course.pi|add:stats.course.ipi }}
+                        ({% widthratio stats.course.pi|add:stats.course.ipi stats.course.equipes 100 %}%)
+                    </a>
+                </td>
+                <td>
+                    <a href="inscriptions/equipe/?status=erreur">
+                        {{ stats.course.pe|add:stats.course.ipe }}
+                        ({% widthratio stats.course.pe|add:stats.course.ipe stats.course.equipes 100 %}%)
+                    </a>
+                </td>
+                <td>
+                    <a href="inscriptions/equipe/?status=verifier">
+                        {{ stats.course.pv|add:stats.course.ipv }}
+                        ({% widthratio stats.course.pv|add:stats.course.ipv stats.course.equipes 100 %}%)
+                    </a>
+                </td>
+                <td>
+                    <a href="inscriptions/equipe/">
+                        {{ stats.course.equipes }}
                     </a>
                 </td>
             </tr>
