--- a/inscriptions/templates/form.html
+++ b/inscriptions/templates/form.html
@@ -93,7 +93,7 @@
                     <div class="checkbox">
                         <label>
                             <input type="checkbox" name="conditions" id="id_conditions" {% if update %}checked {% endif %}/>
-                            {% blocktrans with url=COURSE.url_reglement %}J'accepte le <a href="{{ url }}" target="_blank">règlement de la course</a>{% endblocktrans %}
+                            {% blocktrans with url=COURSE.url_reglement %}Je certifie que les données transmises sont exactes et j'accepte le <a href="{{ url }}" target="_blank">règlement de la course</a>{% endblocktrans %}
                         </label>
                     </div>
                 </div>
