--- a/static/src/less/custom.less
+++ b/static/src/less/custom.less
@@ -27,3 +27,11 @@ p.login-signup {
         margin: 2em 0;
     }
 }
+
+#payment-form button[type=submit] i {
+    display: none;
+    font-size: 24px;
+}
+#payment-form.submitting button[type=submit] i {
+    display: inline;
+}
