--- a/static/src/less/admin.less
+++ b/static/src/less/admin.less
@@ -25,3 +25,7 @@
 .aligned .field-course_model ul li {
     list-style: none;
 }
+.dashboard .module.summary tr:first-child th { width: 100%; }
+.dashboard .module.summary tr:first-child th+td { width: auto; }
+.dashboard .module.summary tr th { width: auto; }
+.dashboard .module.summary tr th+td { width: 100%; }
