--- a/inscriptions/templates/admin/inscriptions/equipe/change_form.html
+++ b/inscriptions/templates/admin/inscriptions/equipe/change_form.html
@@ -29,8 +29,8 @@
     $('.form-row.field-prix>div').addClass('field-box');
     $('.form-row.field-prix').append(
 '        <div class="field-box">' +
-'            <label>Paiement</label>' +
-'            <div class="readonly"><a href="../../../paiement/?equipe_id={{ original.id }}">{{ original.montant_paiements }}</a> <button type="button" onclick="location.href=\'../../../paiement/add?equipe_id={{ original.id }}\';">Ajouter un paiement</button></div>' +
+'            <label>Payé</label>' +
+'            <div class="readonly"><a href="../../../paiement/?equipe_id={{ original.id }}">{{ original.montant_paiements }} (voir les paiements)</a> <button type="button" onclick="location.href=\'../../../paiement/add?equipe_id={{ original.id }}\';">Ajouter un paiement</button></div>' +
 '        </div>')
 </script>
 {% endif %}
