--- a/inscriptions/templates/listing_dossards.html
+++ b/inscriptions/templates/listing_dossards.html
@@ -46,8 +46,8 @@
             <td>{{ e.gerant_prenom }} {{ e.gerant_nom }}</td>
             <td class="r">{{ e.nombre }}</td>
             <td style="color: red">
-                {% if e.reste_a_payer > 0 %}{{ e.reste_a_payer }}€ du{% endif %}
-                {% if e.reste_a_payer < 0 %}trop perçu {{ e.reste_a_payer }}€{% endif %}
+                {% if e.reste_a_payer > 0 %}{{ e.reste_a_payer }}€ reste à payer{% endif %}
+                {% if e.reste_a_payer < 0 %}{{ e.reste_a_payer }}€ à restituer{% endif %}
             </td>
             <td></td>
         </tr>
