--- a/inscriptions/templates/mails/inscription.html
+++ b/inscriptions/templates/mails/inscription.html
@@ -33,7 +33,7 @@
     </ul>
 {% endif %}
 {% if not instance.paiement_complet or instance.licence_manquantes or instance.certificat_manquantes or instance.autorisation_manquantes %}
-    <p>Si vous souhaitez envoyez votre paiement ou vos justificatifs par courrier, merci de les envoyer &agrave;</p>
+    <p>Si vous souhaitez envoyer votre paiement ou vos justificatifs par courrier, merci de les envoyer &agrave;</p>
     <p>{{ instance.course.adresse|linebreaksbr }}</p>
     <p>En pr&eacute;cisant le nom de votre &eacute;quipe et le num&eacute;ro d'inscription <strong>{{ instance.numero }}</strong>.</p>
 {% endif %}
@@ -79,5 +79,5 @@
     <p>Specifying the name of your team and the registration number <strong>{{ instance.numero }}</strong>.</p>
 {% endif %}
 <p>You'll be informed as soon your registration is complete.</p>
-<p>If you wan't to modify an information or add a missing justificative, you can do it by <a href="{{ ROOT_URL }}{% url "inscriptions_edit" course_uid=instance.course.uid numero=instance.numero code=instance.password %}">clicking herei</a>.</p>
+<p>If you wan't to modify an information or add a missing justificative, you can do it by <a href="{{ ROOT_URL }}{% url "inscriptions_edit" course_uid=instance.course.uid numero=instance.numero code=instance.password %}">clicking here</a>.</p>
 <p>--<br />{{ instance.course.organisateur }}</p>
