--- a/inscriptions/templates/admin/dashboard.html
+++ b/inscriptions/templates/admin/dashboard.html
@@ -196,6 +196,10 @@ location.href = "choose/";
                         <i class="fa fa-exclamation-triangle"></i><br />
                         <label>{% blocktrans %}Anomalies{% endblocktrans %}</a>
                     </a>
+                    <a href="/wiki/" target="_blank">
+                        <i class="fa fa-book"></i><br />
+                        <label>{% blocktrans %}Wiki{% endblocktrans %}</a>
+                    </a>
                 </td>
             </tr>
         </table>
