--- a/inscriptions/templates/_footer.html
+++ b/inscriptions/templates/_footer.html
@@ -1,3 +1,3 @@
 {% load i18n %}
 
-<a href="https://creativecommons.org/licenses/by-nc-sa/3.0/fr/">CC BY NC SA</a> - <a href="http://puyb.net/">Puyb</a>
+<a href="https://creativecommons.org/licenses/by-nc-sa/3.0/fr/">CC BY NC SA</a> - <a href="http://puyb.net/">Puyb</a> - <a href="https://github.com/Puyb/inscriptions_roller"><i class="fa fa-github"></i> Github</a>
