--- a/inscriptions/templates/mails/paiement.html
+++ b/inscriptions/templates/mails/paiement.html
@@ -11,7 +11,7 @@
 <p>Votre facture pour l'équipe {{ equipe_paiement.equipe.numero }} {{ equipe_paiement.equipe.nom }} est téléchargeable en cliquant sur <a href="{{ ROOT_URL }}/{{ equipe_paiement.equipe.course.uid }}/{{ equipe_paiement.equipe.numero }}/facture/">ce lien</a>.</p>
 {% endif %}
 {% endfor %}
-<p>--<br />{{ paiement.course.organisateur }}</p>
+<p>--<br />{{ instance.course.organisateur }}</p>
 <hr />
 <p>Hi, {{ instance.gerant_prenom }} {{ instance.gerant_nom }}<br /> We just received your payment of &euro; {{ paiement.montant }} for:</p>
 <ul>
@@ -20,5 +20,5 @@
 {% endfor %}
 </ul>
 
-<p>--<br />{{ paiement.course.organisateur }}</p>
+<p>--<br />{{ instance.course.organisateur }}</p>
 {% endwith %}
