bugs nombre participants, etc

--- a/inscriptions/templates/admin/dashboard.html
+++ b/inscriptions/templates/admin/dashboard.html
@@ -166,6 +166,11 @@ location.href = "choose/";
                     </a>
                 </td>
             </tr>
+            <!--tr>
+                <th>Equipiers:</th>
+                <td>{{ stats.course.equipiers }} / {{ COURSE.limite_participants }}</td>
+                <td colspan=4></td>
+            </tr-->
         </table>
     </div>
     {% endwith %}
